src/python/k4a/src/k4a/_bindings/k4a.py


#K4A_EXPORT k4a_status_t k4a_transformation_depth_image_to_color_camera(k4a_transform_t transformation_handle,
#                                                                       const k4a_image_t depth_image,
#                                                                       k4a_image_t transformed_depth_image);
k4a_transformation_depth_image_to_color_camera = _k4a_lib.k4a_transformation_depth_image_to_color_camera
k4a_transformation_depth_image_to_color_camera.restype = EStatus
k4a_transformation_depth_image_to_color_camera.argtypes = (
    _TransformationHandle, _ImageHandle, _ImageHandle)


#K4A_EXPORT k4a_status_t
#k4a_transformation_depth_image_to_color_camera_custom(k4a_transform_t transformation_handle,
#                                                      const k4a_image_t depth_image,
#                                                      const k4a_image_t custom_image,
#                                                      k4a_image_t transformed_depth_image,
#                                                      k4a_image_t transformed_custom_image,
#                                                      k4a_transformation_interpolation_type_t interpolation_type,
#                                                      uint32_t invalid_custom_value);
k4a_transformation_depth_image_to_color_camera_custom = _k4a_lib.k4a_transformation_depth_image_to_color_camera_custom
k4a_transformation_depth_image_to_color_camera_custom.restype = EStatus
k4a_transformation_depth_image_to_color_camera_custom.argtypes = (
    _TransformationHandle, _ImageHandle, _ImageHandle, _ImageHandle, _ImageHandle,
    _ctypes.c_int, _ctypes.c_uint32)


#K4A_EXPORT k4a_status_t k4a_transformation_color_image_to_depth_camera(k4a_transform_t transformation_handle,
#                                                                       const k4a_image_t depth_image,
#                                                                       const k4a_image_t color_image,
#                                                                       k4a_image_t transformed_color_image);
k4a_transformation_color_image_to_depth_camera = _k4a_lib.k4a_transformation_color_image_to_depth_camera
k4a_transformation_color_image_to_depth_camera.restype = EStatus
k4a_transformation_color_image_to_depth_camera.argtypes = (_TransformationHandle, _ImageHandle, _ImageHandle, _ImageHandle)


#K4A_EXPORT k4a_status_t k4a_transformation_depth_image_to_point_cloud(k4a_transform_t transformation_handle,
#                                                                      const k4a_image_t depth_image,
#                                                                      const k4a_calibration_type_t camera,
#                                                                      k4a_image_t xyz_image);
k4a_transformation_depth_image_to_point_cloud = _k4a_lib.k4a_transformation_depth_image_to_point_cloud
k4a_transformation_depth_image_to_point_cloud.restype = EStatus
k4a_transformation_depth_image_to_point_cloud.argtypes = (_TransformationHandle, _ImageHandle, _ctypes.c_int, _ImageHandle)
